2010-03-19  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/state/maximize.jl: make maximize-/-fullscreen/fullxinerama
	                                     honor maximize-raises [Nolan Leake]

2010-03-13  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/util/display-wininfo.jl: missing require

2010-03-13  Teika Kazura <teika@lavabit.com>
	* lisp/sawfish/wm/util/display-wininfo.jl
	* man/news.texi
	* man/sawfish.texi: 'display-window-position' command is implemented.

	* lisp/sawfish/wm/state/maximize.jl: Deleted bogus exports.

	* lisp/sawfish/wm/custom.jl
	* lisp/sawfish/wm/stacking.jl: Fix of a semi-bug. (defgroup stacking)
	is moved to custom.jl from stacking. Without this, adding 'tab' to
	open clause of wm.frames breaks the startup. Read git commit
	928355 log for the details.

	* README
	* lisp/sawfish/wm/ext/old-window-menu.jl: Minor doc change.

2010-03-06  Teika Kazura <teika@lavabit.com>
	* OPTIONS
	* lisp/sawfish/wm/util/display-window.jl
	* man/faq.texi
	* man/news.texi
	* man/sawfish.texi
	* src/events.c
	* src/windows.c: Doc, mainly texi "windows" chapter organization. Groups are revised. New sections: "Getting Windows",
	                 "Stacking Vilibility", "Activating Window". Functions `display-window' and `activate-window' are documented.
			 Option `unshade-selected-windows' is documented.  Distinction between 'window-wants-input-p' and
			 'window-really-wants-input-p' is described. Minor error fix: 'window-transient-p' returns the parent id,
			 not t, when transient. Docstring with trailing "\\w" puts the widget right to the label in the configurator.
			 Faq item on per head workspace switching.

	* OPTIONS
	* lisp/sawfish/wm/windows.jl
	* man/faq.texi
	* man/news.texi: Long unsupported option 'ignore-window-input-hint' is deleted, together with related codes.

	* man/news.texi
	* man/sawfish.texi: In texi, dropped 'edition' number, the date oflast update, and so on. These items tend to be