@@ -46,6 +46,8 @@ It has been invalid for long.
 
 @item Honor maximize-raises in @code{maximize-window-fullscreen} and
 @code{maximize-window-fullxinerama}, too, not just in maximize-window [Nolan Leake]
+
+@item More robustness of our fdo-menu implementation [Teika Kazura]
 @end itemize
 
 @item Other Changes
