@@ -2,6 +2,8 @@
 	* lisp/sawfish/wm/state/maximize.jl: make maximize-/-fullscreen/fullxinerama
 	                                     honor maximize-raises [Nolan Leake]
 
+	* lisp/sawfish/wm/ext/apps-menu.jl: more robustness
+
 2010-03-13  Christopher Bratusek <zanghar@freenet.de>
 	* lisp/sawfish/wm/util/display-wininfo.jl: missing require
 
